# IPK

./: .gitignore  CMakeLists.txt
Uebung1/: errors  errors.cc  exampleprogram.tar.xz  legalbutwrong  legalbutwrong.cc
Uebung3/: CMakeLists.txt  collatz.cpp  fibonacci.cpp  midnight.cpp
Uebung4/: CMakeLists.txt  power.cpp
Uebung5/: CMakeLists.txt  numberList.cpp  numberRead.cpp
Uebung6/: CMakeLists.txt  letterfrequencies.cpp  letterfrequencies.hh  normal.cpp  readvector.cpp  statistics.cpp  statistics.hh  statistics_test.cpp  uniform.cpp  wordfrequencies.cpp  wordfrequencies.hh  wordfrequenciesunordered.cpp  wordfrequenciesunordered.hh
Uebung7/: CMakeLists.txt  area_calculation.cpp  polygon.cpp  polygon.hh
Uebung8/: CMakeLists.txt  templates.cpp
